--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
-    <main id='main'></main>
+    <main id='main'>so the site is up at least</main>
   </body>
 </html>
