freaking crap I'm frustrated (not gonna bother spell checking)

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
-    <main id='main'>so the site is up at least</main>
+    <main id='main'>
+      <h1>Do you even search bro?</h1>
+
+      <input type="text" placeholder="Search" />
+      <div class="vis-div"> </div>
+
+    </main>
   </body>
 </html>
