--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,14 @@
     <main id='main'>
       <h1>Do you even search bro?</h1>
 
-      <input type="text" placeholder="Search" />
+      <input type="text" placeholder="Search bro?" />
       <div class="vis-div"> </div>
+
+
+
+      <footer>
+        Created by Josiah Leon
+      </footer>
 
     </main>
   </body>
