can now search whatever word you want

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
     <main id='main'>
       <h1>Do you even search bro?</h1>
 
-      <input type="text" placeholder="Search bro?" />
-      <div class="vis-div"> </div>
+      <input type="text" placeholder="Search bro?" id="search-input"/>
+      <h2>Search Term: <i id='search-title'></i></h2>
+      <div class="vis-div"></div>
 
 
 
