added more info

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
       <div class='shape'></div>
       <h1>Search Hype</h1>
 
+      <div id='more-info'>
+        <div class="shape"></div>
+
+        <p>
+          Search Hype is lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google search are. they are scaled between 0 and a 100 and showen to you on this lovely graph.
+          If you want to know more about me or this project, check out the links at the bottom of the page 😃
+        </p>
+      </div>
+
       <div id="search-items">
         <h2>Search Term: <i class='search-title'></i></h2>
         <input type="text" placeholder="Search Anything" id="search-input"/>
@@ -26,11 +35,11 @@
         <p>Search Term: <i class='search-title'></i></p>
 
         <p>
-          It searched the most during <i id="p-date">Jan 2007</i>&nbsp with a popularity of <i id="p-val">67</i>/100
+          It searched the <u>most</u> during <i id="p-date">Jan 2007</i>&nbsp with a popularity of <i id="p-val">67</i>/100
         </p>
 
         <p>
-          It searched the least during <i id="w-date">Mar 2015</i>&nbsp with a popularity of <i id="w-val">7</i>/100
+          It searched the <u>least</u> during <i id="w-date">Mar 2015</i>&nbsp with a popularity of <i id="w-val">7</i>/100
         </p>
 
       </div>
