--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="shape"></div>
 
         <p>
-          Search Hype is lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google search are. they are scaled between 0 and a 100 and showen to you on this lovely graph.
+          Search Hype is lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google search are. they are scaled between 0 and a 100 and are shown to you on this lovely graph.
           If you want to know more about me or this project, check out the links at the bottom of the page 😃
         </p>
       </div>
@@ -35,11 +35,11 @@
         <p>Search Term: <i class='search-title'></i></p>
 
         <p>
-          It searched the <u>most</u> during <i id="p-date">Jan 2007</i>&nbsp with a popularity of <i id="p-val">67</i>/100
+          It searched the <u>most</u> during <i id="p-date">Mar 2001</i>&nbsp with a popularity of <i id="p-val">0</i>/100
         </p>
 
         <p>
-          It searched the <u>least</u> during <i id="w-date">Mar 2015</i>&nbsp with a popularity of <i id="w-val">7</i>/100
+          It searched the <u>least</u> during <i id="w-date">Jun 2021</i>&nbsp with a popularity of <i id="w-val">20</i>/100
         </p>
 
       </div>
@@ -51,7 +51,7 @@
 
     <footer>
       <a href="https://github.com/ROTBOW">Josiah Leon</a>
-      <a href="https://github.com/ROTBOW/js_proj">Github</a>
+      <a href="https://github.com/ROTBOW/search-hype">Github</a>
     </footer>
 
   </body>
