--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,22 @@
   <body>
     <main id='main'>
       <div class='shape'></div>
+
+      <div class="hover-arrow">
+        <div class="shape"></div>
+        <div>Mouse over me</div>
+      </div>
+
       <h1>Search Hype</h1>
 
       <div id='more-info'>
-        <div class="shape"></div>
-
         <p>
           Search Hype is lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google search are. they are scaled between 0 and 100 and are shown to you on this lovely graph.
           If you want to know more about me or this project, check out the links at the bottom of the page 😃
         </p>
       </div>
+
+      
 
       <div id="search-items">
         <h2>Search Term: <i class='search-title'></i></h2>
