Now shows two search bars

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,11 @@
 
       <div id="search-items">
         <h2>Search Term: <i class='search-title'></i></h2>
-        <input type="text" placeholder="Search Anything" id="search-input"/>
+
+        <form id="search-form">
+          <input type="text" placeholder="compare?" id="second-input"/>
+          <input type="text" placeholder="Search Anything" id="search-input"/>
+        </form>
       </div>
 
       <div class="vis-div"></div>
