--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
       <div id='more-info'>
         <p>
-          Search Hype is lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google search are. they are scaled between 0 and 100 and are shown to you on this lovely graph.
+          Search Hype is a lightweight (only 46mb as of writing this), pure-javascript app that lets you see how popular google searches are. they are scaled between 0 and 100 and are shown to you on this lovely graph.
           If you want to know more about me or this project, check out the links at the bottom of the page 😃
         </p>
       </div>
