--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+
+    <meta property="og:title" content="Search Hype">
+    <meta property="og:image" contant="./../assets/images/searchHype.png">
+    <meta property="og:description" content="
+    Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are
+    ">
+    <meta property="og:url" content="https://github.com/ROTBOW/search-hype">
+
+
+    <title>Search Hype</title>
     <script type="text/javascript" src="./bundle.js"></script>
+    
+
+    <link rel="icon" type="image/svg+xml" href="./styles/images/favicon.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
