this time for sure

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <meta property="og:title" content="Search Hype">
-    <meta name="image" property="og:image" contant="./styles/images/searchHype.png">
+    <meta name="image" property="og:image" content="./styles/images/searchHype.png">
     <meta property="og:description" content="
     Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are
     ">
