--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
   </head>
@@ -47,8 +50,8 @@
         <h2>Search Term: <i class='search-title'></i></h2>
 
         <form id="search-form">
-          <input type="text" placeholder="compare?" id="second-input"/>
-          <input type="text" placeholder="Search Anything" id="search-input"/>
+          <input type="text" placeholder="compare?" id="second-input" maxlength="15"/>
+          <input type="text" placeholder="Search Anything" id="search-input" maxlength="15"/>
         </form>
       </div>
 
