fixed meta url tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="
     Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are
     ">
-    <meta property="og:url" content="https://github.com/ROTBOW/search-hype">
+    <meta property="og:url" content="https://search-hype.herokuapp.com/">
 
 
     <title>Search Hype</title>
