adding google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
 
     <meta property="og:title" content="Search Hype">
     <meta name="image" property="og:image" content="./styles/images/searchHype.png">
-    <meta property="og:description" content="
-    Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are
-    ">
+    <meta name="description" content="Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are">
+    <meta property="og:description" content="Search Hype is a lightweight pure-javascript app that lets you see how popular google searches are">
     <meta property="og:url" content="https://search-hype.herokuapp.com/">
 
 
@@ -25,6 +24,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKJD2F98P9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VKJD2F98P9');
+    </script>
   </head>
   <body>
     <main id='main'>
